# seqan

apps/key_shuffler/: CMakeLists.txt  key_shuffler.cpp
core/apps/fiona/: compute_gain.cpp
core/include/seqan/: index.h  platform.h  sequence.h  stream.h
core/include/seqan/align/: gap_anchor.h  gaps_base.h
core/include/seqan/basic/: alphabet_concept.h  alphabet_math.h  alphabet_residue.h  alphabet_residue_funcs.h  alphabet_residue_tabs.h  alphabet_simple_type.h  alphabet_storage.h  array_construct_destruct.h  basic_type.h  concept_checking.h  debug_test_system.h  fundamental_comparison.h  fundamental_conversion.h  holder_simple.h  holder_tristate.h  iterator_adaptor.h  iterator_interface.h  math_functions.h  metaprogramming_math.h  pair_base.h  pair_packed.h  tuple_base.h  tuple_bit_compressed.h
core/include/seqan/file/: file_interface.h  file_mapping.h  string_external.h
core/include/seqan/graph_types/: graph_edgestump.h  graph_iterator_edge.h
core/include/seqan/index/: find_index_core.h  find_index_esa.h  index_base.h  index_esa_base.h  index_esa_stree.h  index_fm.h  index_fm_compressed_sa.h  index_fm_compressed_sa_iterator.h  index_fm_lf_table.h  index_fm_prefix_sum_table.h  index_fm_rank_dictionary_base.h  index_fm_rank_dictionary_bms.h  index_fm_rank_dictionary_levels.h  index_fm_rank_dictionary_naive.h  index_fm_rank_dictionary_wt.h  index_fm_rank_support_bit_string.h  index_fm_rank_support_bit_string_iterator.h  index_fm_rank_support_string.h  index_fm_right_array_binary_tree.h  index_fm_right_array_binary_tree_iterator.h  index_fm_sentinel_rank_dictionary.h  index_fm_sparse_string.h  index_fm_stree.h  index_gapped_dislex.h  index_gapped_dislex_external.h  index_gapped_sa.h  index_gapped_sa_dislex.h  index_generalized_sa.h  index_sa_qsort.h  index_sa_radixSort.h  index_sa_stree.h  index_shims.h  index_skew7_multi.h  radix_inplace.h  shape_base.h  shape_threshold.h
core/include/seqan/misc/: misc_bit_twiddling.h  misc_dequeue.h
core/include/seqan/modifier/: cyclic_shape.h  modifier_reverse.h  modifier_string.h  modifier_view.h
core/include/seqan/parallel/: parallel_lock.h  parallel_macros.h  parallel_resource_pool.h
core/include/seqan/pipe/: pipe_gapped_tupler.h
core/include/seqan/platform/: platform_gcc.h  platform_icc.h  platform_mingw.h  platform_nvcc.h  platform_pgi.h  platform_solaris.h  platform_windows.h
core/include/seqan/seeds/: seeds_seed_base.h
core/include/seqan/seq_io/: genomic_region.h
core/include/seqan/sequence/: segment_base.h  segment_infix.h  segment_prefix.h  segment_suffix.h  sequence_forwards.h  sequence_interface.h  string_alloc.h  string_base.h  string_block.h  string_packed.h  string_set_base.h  string_set_concat_direct.h
core/include/seqan/stream/: concatter_stream.h  file_bgzf.h  file_stream.h  stream_base.h  stream_compressor.h  stream_concatter.h  stream_gz_file.h  virtual_stream.h
core/include/seqan/stream/zipstream/: bgzfstream.h  bgzfstream.hpp  bgzfstream.ipp
core/tests/bam_io/: test_bam_file.h  test_bam_io.cpp
core/tests/generalized_index_sa/: CMakeLists.txt  test_generalized_index_sa.cpp  test_generalized_index_sa.h
core/tests/index/: CMakeLists.txt  test_index_fm.cpp  test_index_fm.h  test_index_fm_compressed_sa.h  test_index_fm_compressed_sa_iterator.h  test_index_fm_prefix_sum_table.h  test_index_fm_rank_dictionary.cpp  test_index_fm_rank_dictionary.h  test_index_fm_rank_dictionary_levels.h  test_index_fm_rank_support_bit_string.h  test_index_fm_rank_support_string.h  test_index_fm_right_array_binary_tree.h  test_index_fm_right_array_binary_tree_iterator.h  test_index_fm_sentinel_rank_dictionary.h  test_index_fm_sparse_string.h  test_index_fm_stree.h
core/tests/sequence/: test_sequence.h
core/tests/stream/: CMakeLists.txt  test_pager.cpp  test_stream_virtual_stream.h
extras/apps/cuda_demo/: CMakeLists.txt  INFO  cuda_demo.cpp  cuda_demo.cu  cuda_demo.h
extras/apps/cuda_finder/: CMakeLists.txt  INFO  cuda_finder.cu  cuda_finder.h
extras/apps/cuda_mapper/: CMakeLists.txt  INFO  cuda_mapper.cpp  cuda_mapper.cu  cuda_mapper.h  genome.h  genome_index.h  index.h  indexer.cpp  kernels.cu  kernels.h  mapper.cpp  mapper.cu  mapper.cuh  mapper.h  types.h
extras/apps/gpubench/: CMakeLists.txt  gpubench.cu  gpubench.h  myers.h  testset.h
extras/apps/masai/: CMakeLists.txt  LICENSE  extender.h  index.h  indexer.cpp  manager.h  mapper.cpp  mapper.h  matches.h  options.h  pairer.cpp  seeder.h  sorter.cpp  store.h  writer.h
extras/apps/masai/index/: genome_index.h  reads_index.h
extras/apps/masai/store/: genome.h  reads.h
extras/include/seqan/: basic_extras.h  index_extras.h  misc_extras.h  sequence_extras.h
extras/include/seqan/basic/: basic_device.h  basic_view.h
extras/include/seqan/index/: find_index.h  find_index_multiple.h  find_index_multiple_device.h  find_index_new.h  index_device.h  index_sa_stree.h  index_view.h  iter_vstree_factory.h
extras/include/seqan/journaled_set/: journaled_set_base.h
extras/include/seqan/misc/: cuda.h  misc_cuda.h  misc_delegator.h  misc_device.h  misc_device_concat_direct.h  misc_threads.h  misc_view.h  misc_view_concat_direct.h
extras/include/seqan/misc/cuda/: printf.cu
extras/include/seqan/sequence/: adapt_thrust_vector.h  container_view.h  string_set_contat_direct_device.h  string_set_contat_direct_view.h
extras/tests/index/: CMakeLists.txt  test_index_view.cpp  test_index_view.h
sandbox/meiers/: CMakeLists.txt
sandbox/meiers/apps/: CMakeLists.txt
sandbox/meiers/apps/benchmark_sa_construction/: CMakeLists.txt  INFO  benchmark_sa_construction.cpp
sandbox/meiers/apps/uselessApp/: CMakeLists.txt  INFO  uselessApp.cpp
sandbox/meiers/demos/: CMakeLists.txt
sandbox/meiers/tests/: CMakeLists.txt
util/cmake/: FindCryptoPP.cmake  SeqAnLegacyBuildSystem.cmake
